[tool.poetry]
name = "git-llm-tool"
version = "0.1.19"
description = "AI-powered git commit message and changelog generator"
authors = ["skyler-gogolook <skyler.lo@gogolook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/z0890142/git-llm-tool"
repository = "https://github.com/z0890142/git-llm-tool"
documentation = "https://github.com/z0890142/git-llm-tool#readme"
keywords = ["git", "commit", "llm", "ai", "automation", "jira", "conventional-commits"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
packages = [{include = "git_llm_tool"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.0"
pyyaml = "^6.0"
openai = "^1.0.0"
anthropic = "^0.30.0"
google-generativeai = "^0.5.0"
langchain = "^0.2.0"
langchain-openai = "^0.1.0"
langchain-anthropic = "^0.1.23"
langchain-ollama = "^0.1.0"
langchain-google-genai = "^1.0.0"
tiktoken = "^0.7.0"
halo = "^0.0.31"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.14.0"
black = "^24.0.0"
isort = "^5.13.0"
flake8 = "^7.0.0"

[tool.poetry.scripts]
git-llm = "git_llm_tool.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]